src/App.css
.container{
  margin-top: 20px;
  margin-bottom: 20px;
  width: 90%;
  background-color: #F5F5F5;
  border-radius: 30px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  box-shadow: 0px 0px 60px 11px rgba(0,0,0,0.1);
  transition: all 0.3s;
}
.card_small{
  width: 400px;
  min-height: 100%;
  display: flex;
  flex-direction: column;
}
.card_small .top{
  flex: 0 0 auto;
}
.card_small .middle{
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.card_small .bottom{
  flex: 0 0 auto;
}

.card_small .top_search{
  margin-top: 20px;
  width: calc(100% - 30px);
  height: 70px;
  display: flex;
  padding-left: 20px;
  align-items: center;
  gap: 5px;
}
.card_small .top_search input{
  margin-left: 5px;
  flex: 1;
  height: 30px;
  border: 2px solid #b3b3b3;
  border-radius: 20px;
  padding: 5px;
  padding-left: 10px;
  outline: none;
  font-family: 'Roboto', sans-serif;
  font-weight: bold;
  font-size: 18px;
  overflow: hidden;
  background-color: transparent;
  transition: all 0.2s;
}
.card_small .top_search input:hover{
  transform: scale(1.02);
}
.card_small .top_search button{
  border: 2px solid #b3b3b3;
  font-size: 20px;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  transition: all 0.2s;
}
.card_small .top_search button:hover{
  transform: scale(1.1);
}
.card_small .middle_location{
  margin-top: 10px;
  width: 100%;
  height: 100px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: 'Roboto', sans-serif;
  font-weight: bold;
}
.row_special{
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  flex: 1;
}
.card_small .middle_location h1{
  max-width: 100%;
  font-size: 30px;
  word-wrap: normal;
}
.card_small .middle_icon{
  width: 100%;
  height: 230px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: 'Roboto', sans-serif;
  font-weight: bold;
  margin-bottom: 30px;
}
.card_small .middle_icon img{
  width: 70%;
  max-height: 230px;
}
.card_small .middle_icon img, .card_small .middle_location h1, .card_small .middle_degrees, .card_small .middle_day{
  transition: all 0.3s;
}
.card_small .middle_icon img:hover, .card_small .middle_location h1:hover, .card_small .middle_degrees:hover, .card_small .middle_day:hover{
  transform: scale(1.1);
}
.card_small .middle_degrees {
  width: 100%;
  height: 80px;
  display: flex;
  justify-content: center;
  font-family: 'Roboto', sans-serif;
  font-size: 40px;
}
.card_small .middle_degrees *{
  margin: 0px;
}
.card_small .middle_degrees .celsius{
  margin-top: 12px;
  font-size: 40px;
}
.card_small .middle_day{
  margin-top: 20px;
  width: 100%;
  height: 100px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  font-family: 'Roboto', sans-serif;
  font-weight: 100;
  font-size: 13px;
}
.card_small .middle_day .hours{
  display: flex;
  align-items: center;
  justify-content: center;
}
.card_small .middle_day .last_update h2, .card_small .hours h1{
  margin: 5px;
}
.card_small .middle_day .hour{
  margin-left: 10px;
  color: #646464;
}
.card_small .separator{
  margin-top: 40px;
  width: 100%;
}
.card_small .separator hr{
  width: 80%;
  border: 2px solid #e0e0e0;
}
.card_small .created{
  padding-bottom: 20px;;
  width: 100%;
  display: flex;
  align-content: center;
  justify-content: center;
  flex-direction: column;
  font-family: 'Roboto', sans-serif;
  font-weight: bold;
  font-size: 17px;
  text-align: center;
}
.card_small .created p{
  margin: 15px;
  flex: 1;
  font-size: 20px;
}
.card_small .created .social{
  flex: 1;
  width: 100%;
  text-decoration: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
}
.card_small .created .social svg{
  font-size: 20px;
  color: black;
  transition: all 0.2s;
}
.card_small .created .social svg:hover{
  transform: scale(1.2);
}

.card_big{
  padding: 35px;
  width: calc(100% - 400px - 70px);
  background-color: #ebebec;
  border-radius: 30px;
  box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.1);
  display: flex;
  flex-direction: column;
  overflow: hidden;
  flex: 1;
}
.card_big .top{
  width: 100%;
  flex: 0 0 auto;
  display: flex;
  justify-content:space-between;
  flex-wrap: wrap;
  gap: 20px;
}
.card_big .top .left, .card_big .top .right{
  display: flex;
  gap: 20px;
}
.card_big .top .left button, .card_big .top .right button{
  border: none;
  font-family: 'Roboto', sans-serif;
  font-size: 18px;
  font-weight: bold;
  color: #9c9c9c;
  cursor: pointer;
  background-color: transparent;
  transition: all 0.2s;
}
.card_big .top .right button:hover{
  transform: scale(1.1);
}
.card_big .top .left button:hover{
  color: rgb(77, 77, 77)!important;
}
.card_big .top .left .select{
  color: black;
  text-underline-offset: 5px;
  text-decoration: underline 2px;
}
.card_big .top .right button{
  width: 35px;
  height: 35px;
  background-color: white;
  border-radius: 50%;
  color: black;
}
.card_big .top .right .select{
  background-color: black;
  color: white;
}
.card_big .middle {
  margin-top: 20px;
  width: 100%;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 20px;
}
.card_big .middle .today, .card_big .middle .week{
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 20px;
}
.card_big .middle .card{
  background-color: white;
  width: 130px;
  height: 140px;
  border-radius: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  transition: all 0.3s;
}
.card_big .middle .card:hover{
  transform: scale(1.05);
}
.card_big .middle .card .row{
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-family: 'Roboto', sans-serif;
  font-weight: bold;
  font-size: 19px;
  flex: 1;
}
.card_big .middle .card .row *{
  margin: 0;
  padding: 0;
}
.card_big .middle .card .flexing{
  flex: 1;
}
.card_big .middle .card .row img{
  max-width: 50px;
}

.card_big  .bottom{
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 20px;
  flex: 1;
}
.card_big  .bottom .row, .card_big .bottom .row p{
  width: 100%;
  font-family: 'Roboto', sans-serif;
  font-size: 18px;
  font-weight: bold;
}
.contain{
  width: 100%;
  flex: 1;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 15px; 
}
.card_big  .bottom .card{
  padding: 20px 20px;
  min-height: 130px;
  background-color: white;
  border-radius: 20px;
  flex: 1;
  display: flex;
  flex-direction: row;
  gap: 20px;
  transition: all 0.2s;
}
.card_big  .bottom .card:hover{
  transform: scale(1.02);
}
.card_big  .bottom .card .row_title{
  margin-bottom: 10px;
}
.card_big  .bottom .card .image{
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  gap: 10px;
}
.card_big  .bottom .card .img_special img{
  width: 50px!important;
  max-height: 60px!important;
}
.card_big  .bottom .card .img_special .moon{
  width: 40px!important;
}
.card_big  .bottom .card .image img{
  width: 70px;
}
.card_big  .bottom .card .rows{
  flex: 1;
  display: flex;
  flex-direction: column;
}
.card_big  .bottom .card .title{
  margin: 0;
  font-family: 'Roboto', sans-serif;
  font-size: 18px;
  font-weight: bold;
  color: #797979;
  margin-bottom: 20px;
}
.card_big  .bottom .card .rows .row{
  width: 100%;
  display: flex;
  gap:20px;
  flex: 0 0 auto;
}
.card_big  .bottom .card .rows .row *{
  flex: 0 0 auto;
  margin: 0;
}
.card_big  .bottom .card .rows .row_flex{
  align-items: center;
  flex: 1;
}
.card_big  .bottom .card .rows .val_small{
  font-size: 18px!important;
  color:#868686;
}
.card_big  .bottom .card .rows .value{
  font-family: 'Roboto', sans-serif;
  font-size: 50px;
  font-weight: bold;
}


/* RESPONSIV*/

@media only screen and (max-width: 1410px){
  .contain{
    grid-template-columns: repeat(2, 1fr);
  }
}
@media only screen and (max-width: 1110px){
  .contain{
    grid-template-columns: repeat(1, 1fr);
  }
}
@media only screen and (max-width: 1000px){
  .container{
    flex-direction: column;
    width: 95%;
  }
  .card_small{
    width: 100%;
  }
  .card_big{
    width: calc(100% - 70px);
  }
  .contain{
    grid-template-columns: repeat(2, 1fr);
  }
}
@media only screen and (max-width: 610px){
  .contain{
    grid-template-columns: repeat(1, 1fr);
  }
}

